upvote,comments,profile,profileDP added(minor isuue in uploads(status:resolved))

--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,5 +1,5 @@
 <li>
-    <div>
+    <div id="commentsDiv">
 
         <span><%=comment.user.name%></span> 
         <span><%=comment.content%></span>
@@ -12,3 +12,9 @@
     </div>    
 
 </li>
+
+
+
+<script>
+    
+</script>
