--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -2,7 +2,7 @@
 <a href="/<%=typeOfUser%>/signOut">signOut</a>
 <div>
     
-    <a href="/<%=typeOfUser%>/profile/<%= locals.user._id%>/<%= locals.user._id%>">profile</a>
+    <a href="/<%=typeOfUser%>/profile/<%= locals.user._id%>/">profile</a>
 
 </div>
 
