--- a/views/toggleMenu.ejs
+++ b/views/toggleMenu.ejs
@@ -1,6 +1,7 @@
+ 
 <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="toggleSwitch">
-    <label class="form-check-label" for="toggleSwitch">Toggle switch</label>
+  <input class="form-check-input flexSwitchCheckChecked-<%=item.id%>" type="checkbox" id="flexSwitchCheckChecked" <% if(item.isAvailable) { %> checked <%}%>>
+  <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
 </div>
 <div id="result"></div>
   
@@ -9,12 +10,13 @@
 
 <script>
 
-$(document).ready(function() {
-  $('#toggleSwitch').bootstrapSwitch({
-    onText: 'Enabled',
-    offText: 'Disabled'
-  });
-});
+    $(document).ready(function() {
+      $('#flexSwitchCheckChecked').bootstrapSwitch({
+        onText: 'Available',
+        offText: 'Unavailable',
+        labelWidth: 0
+      });
+    });
 
     new ToggleClass("<%=item.id%>")
 
