--- a/views/DuserSignIn.ejs
+++ b/views/DuserSignIn.ejs
@@ -52,14 +52,11 @@
       <div class="row gx-lg-5 align-items-center mb-5">
         <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
           <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-            The best offer <br />
-            <span style="color: hsl(218, 81%, 75%)">for your business</span>
+            RRR <br />
+            <span style="color: hsl(218, 81%, 75%) ; font-size: 30px;">Rate Review Repeat</span>
           </h1>
           <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Temporibus, expedita iusto veniam atque, magni tempora mollitia
-            dolorum consequatur nulla, neque debitis eos reprehenderit quasi
-            ab ipsum nisi dolorem modi. Quos?
+            
           </p>
         </div>
   
@@ -85,14 +82,15 @@
                 </div>
   
                 <!-- Checkbox -->
-                <div class="form-check d-flex justify-content-center mb-4">
+                <!-- <div class="form-check d-flex justify-content-center mb-4">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
                   <label class="form-check-label" for="form2Example33">
                     Subscribe to our newsletter
                   </label>
-                </div>
+                </div> -->
   
                 <!-- Submit button -->
+                <div style="margin-top: 4rem;">
                 <button type="submit" class="btn btn-primary btn-block mb-4">
                   Sign in
                 </button>
@@ -101,15 +99,15 @@
                 <a href="/user/signUp"><button type="button" class="btn btn-primary btn-block mb-4">
                     Register ?
                   </button>  </a> 
-  
+                </div>
                 <!-- Register buttons -->
                 <div class="text-center">
                   <p>or sign in with:</p>
                   
   
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="bi bi-google"></i>
-                  </button>
+                 <a href="/hotel/signIn"> <button type="button" class="btn btn-success">
+                    Hotel
+                  </button></a>
 
                 
   
