--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -51,18 +51,21 @@ else{
                     <div class="d-flex flex-row align-items-center"> <img src="<%=profilepic%>" alt="no" width="50" class="rounded-circle">
                         <div class="d-flex flex-column ml-2"> <a href="/<%=postUserType%>/profile/<%=post.user.id%>/"><b> <span class="font-weight-bold"><%= post.user.name %></span> </b> </a> 
                             <small >
-                                <%if(post.UserOrHotel == "User" && (post.menuModel != null && post.hotelName!= null)){%>
+                                <%if(post.UserOrHotel == "User" && (post.menuModel != null || post.hotelName!= null)){%>
                                     <span>
                                         <b>
                                             <%=post.user.name%> 
                                         </b> 
                                     
-                                        shared their experience about 
-                                        <b>
-                                            <%=post.menuModel.name%> 
-                                        </b>
-                                         
-                                        they had at
+                                        shared their experience about
+                                        <% if(post.menuModel != null){%>
+
+                                            <b>
+                                                <%=post.menuModel.name%> 
+                                            </b>
+                                             
+                                            they had at
+                                       <% } %> 
                                         <b>
                                             <%= post.hotelName.name%>
                                         </b>
