added google login for users

--- a/views/userSignIn.ejs
+++ b/views/userSignIn.ejs
@@ -65,11 +65,13 @@
 
                             </div>
                             
-                             
 
  
                           </form>
           
+
+                          <a href="/auth/google"> <button><i class="fa fa-google" aria-hidden="true"></i></button> </a>
+
                         </div>
                       </div>
                     </div>
