--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -179,7 +179,7 @@
     </div>
 </div>
 
-<!-- popup form -->
+<!-- popup form for hotel edits -->
 <section >
     <div style="z-index: 999;" id="popup-container">
         <div id="popup-form">
