--- a/views/hotelSignIn.ejs
+++ b/views/hotelSignIn.ejs
@@ -35,6 +35,8 @@
 <button type="submit">Log In</button>
 </div>
 </form>
+<a href="/auth/hotel/google"> <button>google</button> </a>
+
 </div>
 </div>
 <div class="form-panel two">
