--- a/views/userSignIn.ejs
+++ b/views/userSignIn.ejs
@@ -70,7 +70,7 @@
                           </form>
           
 
-                          <a href="/auth/google"> <button><i class="fa fa-google" aria-hidden="true"></i></button> </a>
+                          <a href="/auth/user/google"> <button><i class="fa fa-google" aria-hidden="true"></i></button> </a>
 
                         </div>
                       </div>
